@@ -1,7 +1,7 @@
 #  File src/library/stats/R/approx.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2016 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -24,7 +24,7 @@
 ## (except if ties=="ordered", then not unique)
 
 regularize.values <- function(x, y, ties) {
-    x <- xy.coords(x, y) # -> (x,y) numeric of same length
+    x <- xy.coords(x, y, setLab = FALSE) # -> (x,y) numeric of same length
     y <- x$y
     x <- x$x
     if(any(na <- is.na(x) | is.na(y))) {
